--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,29 @@
   align-items: center;
   justify-content: center;
 }
+
+html {
+  scroll-behavior: smooth;
+}
+
+
+html.lenis,
+html.lenis body {
+  height: auto;
+}
+
+.lenis.lenis-smooth {
+  scroll-behavior: auto !important;
+}
+
+.lenis.lenis-smooth [data-lenis-prevent] {
+  overscroll-behavior: contain;
+}
+
+/* .lenis.lenis-stopped {
+  overflow: hidden;
+} */
+
+.lenis.lenis-smooth iframe {
+  pointer-events: none;
+}
